--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body{
+  background: linear-gradient(
+    to left,
+    #3c4043 0%,
+    #3c4043 50%,
+    #ffc107 50%,
+    #ffc107 100%
+  );
+}
 #div_app{
 	width: 400px;
 	border: 1px solid black;
